# libCMT

./: CMakeLists.txt  KinectVideoCapture.cpp  KinectVideoCapture.h  main.cpp
